--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ Gained valuable experience in digital communication, audience behaviour, and con
     </script>
 
     <script
-        src="assets/js/slick.min.js+ajax-contact.js+jquery.appear.min.js+waypoints.min.js+jquery.counterup.min.js+jquery.easing.min.js+scrolling-nav.js+wow.min.js+main.js.pagespeed.jc.50YN5Dsw2G.js"></script>
+        src="assets/js/slick.js"></script>
     <script>
         eval(mod_pagespeed_uIhKS4vltD);
     </script>
