--- a/index.html
+++ b/index.html
@@ -439,8 +439,7 @@
                                 
                             <span class="wow fadeInUp" data-wow-duration=1.3s data-wow-delay=0.8s>Content Moderator & Review Analyst | Trust & Safety | Multilingual (Urdu/English)
                             </span>
-                            <p class="wow fadeInUp" data-wow-duration=1.3s data-wow-delay=1.1s>A highly motivated and detail-oriented individual with strong communication skills in both English and native Urdu, perfectly suited for roles in content moderation and analysis. With a solid academic background and experience that aligns closely with content reviewing, I bring a deep understanding of cultural nuances, language sensitivity, and online behaviour. I enjoy analysing user-generated content, ensuring it meets platform standards while promoting a safe and respectful environment. My passion for research and curiosity helps me stay updated with trends, and I take pride in collaborating with others to grow and succeed as a team.
-                            </p>
+                            <p class="wow fadeInUp" data-wow-duration=1.3s data-wow-delay=1.1s>A motivated and detail-oriented individual with strong communication skills in English and native Urdu, well-suited for content moderation and analysis roles. With a solid academic background and relevant experience, I understand cultural nuances, language sensitivity, and online behaviour. I’m passionate about reviewing user-generated content, ensuring compliance, and fostering a safe digital space—all while staying current with trends and contributing to team success.</p>
                         
                             <a href="#contact" class="main-btn wow fadeInUp" data-wow-duration=1.3s
                                 data-wow-delay=1.4s>Hire Me</a>
